This now runs on https://gallery.ownimage.com behind a username/password user/**89 It runs as a PWA with a minimal title bar. Runs on iPad Safari 12

--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -2,5 +2,5 @@ Put the directory behind a username/password ... this can be using ionos feature
 Aim to make a gallery app ASAP
 Add readme
 
-Deploy as webapp
-make fullscreen
+Create deploy to ionos script
+need to separate css from index.html
