--- a/display/src/TODO.txt
+++ b/display/src/TODO.txt
@@ -1,6 +1,4 @@
-Put the directory behind a username/password ... this can be using ionos features
-Aim to make a gallery app ASAP
 Add readme
 
-Create deploy to ionos script
-need to separate css from index.html
+can I dynamically add the stylesheets?
+Can I generate config pages
