--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,16 @@
 Add readme
 
 can I dynamically add the stylesheets?
-Can I generate config pages
 
 should have an analog clock
-should have an overall dimmer
-need to have config options for apps
 on ipad when running as an app the quote bar does not go all the way to the bottom
-have a way of excluding from next app
+
+
+Weather
+https://www.visualcrossing.com/resources/blog/replacing-the-google-weather-api/
+
+google calendar
+
+slack ai
+
+need a rotate function
